--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -18,14 +18,14 @@ html {
 
 // 1. Remove the margin
 // 2. Set some typography defaults
-// 3. Set correct font ordering, if Caslon isn't working use system default fonts
+// 3. Set correct font ordering, if my font isn't working use system default fonts
 body {
     margin: 0; // (1)
     background-color: $light-brown;
     color: $dark-grey;
 	line-height: 1.618; // (2)
 	font-size: 21px; // (2)
-	font-family: "adobe-caslon-pro", -apple-system, BlinkMacSystemFont,
+	font-family: "source-serif-pro", -apple-system, BlinkMacSystemFont,
 		"Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
         sans-serif; // (2)(3)
     
