--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -1,6 +1,25 @@
+// -----------------------------------------------
+// Variables
+// -----------------------------------------------
+
 $light-brown: #D7D2C5;
-$dark-grey: #000000;
-$dark-orange: #ad662b;
+$black: #000000;
+
+// All typogrpahy scales off of this value
+$base-text-size: 21px;
+
+// Set correct font ordering, if typekit isn't working use system default fonts
+$font-body: "source-serif-pro", -apple-system, BlinkMacSystemFont,
+		"Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+
+$font-headline: "roc-grotesk-wide", sans-serif;
+
+
+
+// -----------------------------------------------
+// Element Styles
+// -----------------------------------------------
 
 // 1. Set box-sizing globally so it can be inherited more cleanly
 // 2. Prevent adjustments of font size after orientation changes in iOS
@@ -18,21 +37,19 @@ html {
 
 // 1. Remove the margin
 // 2. Set some typography defaults
-// 3. Set correct font ordering, if my font isn't working use system default fonts
+// 3. Set correct font ordering, this will default to system fonts
 body {
     margin: 0; // (1)
     background-color: $light-brown;
-    color: $dark-grey;
+    color: $black;
 	line-height: 1.618; // (2)
-	font-size: 21px; // (2)
-	font-family: "source-serif-pro", -apple-system, BlinkMacSystemFont,
-		"Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-        sans-serif; // (2)(3)
+	font-size: $base-text-size; // (2)
+	font-family: $font-body; // (2)(3)
     
     // Dark mode styles
     @media (prefers-color-scheme: dark) {
         color: $light-brown;
-        background-color: $dark-grey;
+        background-color: $black;
     }
 }
 
@@ -53,12 +70,15 @@ article {
     padding-right: 5vw; // (1)
 }
 
+// - - - - - - - - - - - - - - - - - - - - - - - -
+// Typography
+
 // Headline styles
 h1, h2, h3, h4, h5, h6 {
     margin: 2.618rem 0 2.236rem;
-    color: $dark-orange;
+    color: $black;
     line-height: 1.168;
-    font-family: "roc-grotesk-wide", sans-serif;
+    font-family: $font-headline;
     font-weight: 500;
     letter-spacing: 0.015em;
     
@@ -83,8 +103,16 @@ h2 {
     font-size: 2.382em;
 }
 
-// container styles
-// 1. large padding top and bottom
+
+
+// -----------------------------------------------
+// General Styles
+// -----------------------------------------------
+
+// Container styles
+// 1. Large padding top and bottom
+//    3.618 * 21 = 76px
+//    4.236 * 21 = 89px
 // 2. 32.3 * 21 = 678px
 .container {
 	padding: 3.618em 0 4.236em 0; // (1)
